--- a/web/index.html
+++ b/web/index.html
@@ -422,43 +422,43 @@
           </div>
           <div class='cf_topicContainer'>
             <div class="cf_topic" id='cf_startJob' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Start of Job Procedure</label>
+              <label class='cf_topicLabel'>Start of Job</label>
             </div>
             <div class="cf_topic" id='cf_endJob' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>End of Job Procedure</label>
+              <label class='cf_topicLabel'>End of Job</label>
             </div>
             <div class="cf_topic" id='cf_ironOn' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Soldering Iron On Procedure</label>
+              <label class='cf_topicLabel'>Soldering Iron On</label>
             </div>
             <div class="cf_topic" id='cf_ironOff' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Soldering Iron Off Procedure</label>
+              <label class='cf_topicLabel'>Soldering Iron Off</label>
             </div>
             <div class="cf_topic" id='cf_enableMotors' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Enable Motors Procedure</label>
+              <label class='cf_topicLabel'>Enable Motors</label>
             </div>
             <div class="cf_topic" id='cf_disableMotors' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Disable Motors Procedure</label>
+              <label class='cf_topicLabel'>Disable Motors</label>
             </div>
-            <div class="cf_topic" id='cf_servoAdjustment' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Servo Adjustment</label>
+            <div class="cf_topic" id='cf_enableServo' onclick="config.clickTile(window.event)">
+              <label class='cf_topicLabel'>Enable Servos</label>
             </div>
             <div class="cf_topic" id='cf_disableServo' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Disable Servo Procedure</label>
+              <label class='cf_topicLabel'>Disable Servos</label>
             </div>
             <div class="cf_topic" id='cf_homeX' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>X Homing Procedure</label>
+              <label class='cf_topicLabel'>X Homing</label>
             </div>
             <div class="cf_topic" id='cf_homeY' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Y Homing Procedure</label>
+              <label class='cf_topicLabel'>Y Homing</label>
             </div>
             <div class="cf_topic" id='cf_homeZ' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Z Homing Procedure</label>
+              <label class='cf_topicLabel'>Z Homing</label>
             </div>
             <div class="cf_topic" id='cf_tipChange' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Tip Change Procedure</label>
+              <label class='cf_topicLabel'>Tip Change</label>
             </div>
             <div class="cf_topic" id='cf_clean' onclick="config.clickTile(window.event)">
-              <label class='cf_topicLabel'>Cleaning Procedure</label>
+              <label class='cf_topicLabel'>Cleaning</label>
             </div>
             <div class="cf_topic" id='cf_sandbox' onclick="config.clickTile(window.event)">
               <label class='cf_topicLabel'>Sandbox</label>
