default to light mode

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <!-- Created by Mark Skinner, Aug 2023 -->
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
