wrapped up dark mode

--- a/web/index.html
+++ b/web/index.html
@@ -325,7 +325,7 @@
             </div>
             <table style='border-spacing:10px'>
               <tr>
-                <td style='vertical-align:top'>
+                <td style='vertical-align:top; padding-right: 5px'>
                   <div class='exWrapper exWrapperTable'>
                     <button onclick="execution.startContinuous()" class='exStartBtn'>Start continuous</button>
                     <!-- <button onclick="execution.startNextInstruction()" class='exStartBtn'>Start next instruction</button> -->
